--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,12 @@
 	<body>
 		<div>
 			<p>
-			"hello"
+			<script>
+			var btn = document.createElement('BUTTON');
+			var text = document.createTextNode("Log in");
+			btn.appendChild(text);
+			document.body.appendChild(btn);
+			</script>
 			</p>
 	</body>
 </html>
