--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,25 @@
 						var clientSecret = '967795bf432646f69797a1a7e7d97a0e';
 						var redirect_uri = 'http://jamocracy.herokuapp.com/auth';
 						var scope = 'playlist-read-private playlist-read-colloborative playlist-modify-public playlist-modify-private user-read-private';
-						window.location.replace("http://stackoverflow.com");
+
+						var statekey = 'spotify_auth_state';
+						var generateRandomString = function(length) {
+							var text = '';
+							var possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+							for (var i = 0; i < length; i++) {
+								text += possible.charAt(Math.floor(Math.random() * possible.length));
+							}
+							return text;
+						};
+						var state = generateRandomString(16);
+						window.location.replace('https://accounts.spotify.com/authorize?' +
+						queryString.stringify({
+							response_type: 'code',
+							client_id: client_id,
+							scope: scope,
+							redirect_uri: redirect_uri,
+							state: state
+						}));
 				});
 			});
 		</script>
