--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,13 @@
 <!doctype html>
 <html>
 	<head>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" />
+		<script type = "text/javascript" src = "redirect.js" />
 		<title> Jamocracy aka the future </title>
 		<script>
 			$(document).ready(function() {
 				$("button").click(function() {
-						var clientID = '0095976fe9c24fc5a6e4a7559e01f37e';
-						var clientSecret = '967795bf432646f69797a1a7e7d97a0e';
-						var redirect_uri = 'http://jamocracy.herokuapp.com/auth';
-						var scope = 'playlist-read-private playlist-read-colloborative playlist-modify-public playlist-modify-private user-read-private';
-
-						var statekey = 'spotify_auth_state';
-						var generateRandomString = function(length) {
-							var text = '';
-							var possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-							for (var i = 0; i < length; i++) {
-								text += possible.charAt(Math.floor(Math.random() * possible.length));
-							}
-							return text;
-						};
-						var state = generateRandomString(16);
-						window.location.replace('https://accounts.spotify.com/authorize?' +
-						queryString.stringify({
-							response_type: 'code',
-							client_id: client_id,
-							scope: scope,
-							redirect_uri: redirect_uri,
-							state: state
-						}));
+					window.location = createURL();		
 				});
 			});
 		</script>
