--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,10 @@
 <!doctype html>
 <html>
 	<head>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" />
-		<script type = "text/javascript" src = "redirect.js" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" /></script>
+		<script type = "text/javascript" src = "redirect.js"></script>
 		<title> Jamocracy aka the future </title>
-		<script>
-			$(document).ready(function() {
-				$("button").click(function() {
-					window.location = createURL();		
-				});
-			});
-		</script>
+		<input type="button" onclick="generateURL()" value="Log In" />
 	</head>
 	<body>
 		<div>
