--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,11 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" /></script>
 		<script type = "text/javascript" src = "redirect.js"></script>
 		<title> Jamocracy aka the future </title>
-		<input type="button" onclick="generateURL()" value="Log In" />
-	</head>
+			</head>
 	<body>
 		<div>
-			<p>
-
-			<button>Log in</button>
-			</p>
+			<input type="button" onclick = "generateURL()" value="Log In" ></input>
+		</div>
 	</body>
 </html>
 
