correct button titles

--- a/public/info.html
+++ b/public/info.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 
-<button type="button">Closetclicks.com</button>
-
 <textarea name="textarea" rows="1" cols="50">Enter Number</textarea>
+
+<button type="button">Admin #</button>
+
 
 </br></br>
 
 
-<button type="button">Closetclicks.com</button>
-
 <textarea name="textarea" rows="1" cols="50">Enter Number</textarea>
+
+<button type="button">Playlist Name</button>
 
 </br></br>
 
-<button type="button">Closetclicks.com</button>
-
 <textarea name="textarea" rows="1" cols="50">Enter Number</textarea>
+
+<button type="button">User Phone Number</button>
+
+
+
+<style type="text/css">
+
+textarea {
+	resize: none;
+}
+
+</style>
