3 txt boxes 1 button

--- a/public/info.html
+++ b/public/info.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 
-<textarea name="textarea" rows="1" cols="50">Enter Number</textarea>
-
-<button type="button">Admin #</button>
+<textarea name="textarea" rows="1" cols="50">Enter Admin #</textarea>
 
 
 </br></br>
 
 
-<textarea name="textarea" rows="1" cols="50">Enter Number</textarea>
+<textarea name="textarea" rows="1" cols="50">Playlist name</textarea>
 
-<button type="button">Playlist Name</button>
 
 </br></br>
 
-<textarea name="textarea" rows="1" cols="50">Enter Number</textarea>
+<textarea name="textarea" rows="1" cols="50">User Phone #</textarea>
 
-<button type="button">User Phone Number</button>
+</br></br>
+
+<button name="button">Enter</button>
+
+
 
 
 
