testing info page

--- a/public/info.html
+++ b/public/info.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
+<html>
+	<head>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
+		<title> Info Page </title>
+		<script>
+			$(document).ready(function() {
+				$("button").click(function () {
+					
+				});
+			});
+		</script>
+	</head>
+	<body>				
+		<p>Admin Number</p>
+		<textarea name="textarea" rows="1" cols="50"></textarea>
+		</br></br>
+		<p>Playlist Name</p>
+		<textarea name="textarea" rows="1" cols="50"></textarea>
+		</br></br>
+		<button name="button">Enter</button>
+	</body>
 
-<textarea name="textarea" rows="1" cols="50">Enter Admin #</textarea>
-
-
-</br></br>
-
-
-<textarea name="textarea" rows="1" cols="50">Playlist name</textarea>
-
-
-</br></br>
-
-<textarea name="textarea" rows="1" cols="50">User Phone #</textarea>
-
-</br></br>
-
-<button name="button">Enter</button>
 
 
 
