--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
-		<title> Jamocracy aka the future </title>
+		<title> Jamocracy, the future of music </title>
 		<script>
 			$(document).ready(function() {
 				$("button").click(function() {
