--- a/public/info.html
+++ b/public/info.html
@@ -10,6 +10,7 @@
 					var name = document.getElementById("playlistName").value;
 					var xhttp = new XMLHttpRequest();
 					xhttp.open("POST", "/create", true);
+					xhttp.open("GET", '/create', true);
 					xhttp.send();
 				});
 			});
