--- a/public/info.html
+++ b/public/info.html
@@ -9,7 +9,7 @@
 					var phoneNumber = document.getElementById("adminNumber").value;
 					var name = document.getElementById("playlistName").value;
 					var xhttp = new XMLHttpRequest();
-					xhttp.open("POST", "/create", true);
+					//xhttp.open("POST", "/create", true);
 					xhttp.open("GET", '/create', true);
 					xhttp.send();
 				});
