--- a/public/info.html
+++ b/public/info.html
@@ -9,8 +9,8 @@
 					var phoneNumber = document.getElementById("adminNumber").value;
 					var name = document.getElementById("playlistName").value;
 					var xhttp = new XMLHttpRequest();
-					//xhttp.open("POST", "/create", true);
-					xhttp.open("GET", '/create', true);
+					xhttp.open("POST", '/create', true);
+					window.location = 'jamocracy.herokuapp.com/create';
 					xhttp.send();
 				});
 			});
