trying window.location

--- a/public/info.html
+++ b/public/info.html
@@ -23,7 +23,7 @@
 		<p>Playlist Name</p>
 		<textarea id="playlistName" rows="1" cols="50"></textarea>
 		</br></br>
-		<button name="enter">Enter</button>
+		<button id="enter">Enter</button>
 	</body>
 
 
