fixed the connection probelm

--- a/public/info.html
+++ b/public/info.html
@@ -11,7 +11,7 @@
 					var xhttp = new XMLHttpRequest();
 					xhttp.open("POST", '/create', true);
 					//xhttp.send();
-					window.location = 'https://www.jamocracy.herokuapp.com/create';
+					window.location = 'https://jamocracy.herokuapp.com/create'
 					});
 			});
 		</script>
