working with pull requests

--- a/public/info.html
+++ b/public/info.html
@@ -13,7 +13,7 @@
 								alert('succcess');
 							}
 					});
-					window.location = 'https://jamocracy.herokuapp.com/create'
+					//window.location = 'https://jamocracy.herokuapp.com/create'
 					});
 			});
 		</script>
