--- a/public/info.html
+++ b/public/info.html
@@ -10,10 +10,9 @@
 					var name = document.getElementById("playlistName").value;
 					$.post('https://jamocracy.herokuapp.com/create', {admin: phoneNumber, playlist: name}, function(data) {
 							if (data === 'done'){
-								alert('succcess');
+									window.location = 'https://jamocracy.herokuapp.com/create';
 							}
-					});
-					//window.location = 'https://jamocracy.herokuapp.com/create'
+						});
 					});
 			});
 		</script>
