--- a/public/info.html
+++ b/public/info.html
@@ -8,7 +8,7 @@
 				$("button").click(function () {
 					var phoneNumber = document.getElementById("adminNumber").value;
 					var name = document.getElementById("playlistName").value;
-					$.post('https://jamocracy.herokuapp.com/create', {admin: phoneNumber, playlist: name}).done(function() {
+					$.post('https://jamocracy.herokuapp.com/create', {admin: phoneNumber, playlist: name}).complete(function() {
 							window.location = 'https://jamocracy.herokuapp.com/create';
 						});
 				});
