--- a/public/info.html
+++ b/public/info.html
@@ -8,10 +8,21 @@
 				$("button").click(function () {
 					var phoneNumber = document.getElementById("adminNumber").value;
 					var name = document.getElementById("playlistName").value;
-					$.post('https://jamocracy.herokuapp.com/create', {admin: phoneNumber, playlist: name}, function() {
+					$.ajax({
+						type: "POST",
+						async: true,
+						url: 'https://jamocracy.herokuapp.com/create',
+					   	data: {admin: phoneNumber, playlist: name},
+					    dataType: "json",
+						contentType: "application/json; charset=utf-8"
+						success: function() {
 							window.location = 'https://jamocracy.herokuapp.com/create';
 							alert("s");
-						});
+						}
+						error: function (err){
+							alert("e")
+						}
+					});
 				});
 			});
 		</script>
