--- a/public/info.html
+++ b/public/info.html
@@ -14,11 +14,11 @@
 						url: 'https://jamocracy.herokuapp.com/create',
 					   	data: {admin: phoneNumber, playlist: name},
 					    dataType: "json",
-						contentType: "application/json; charset=utf-8"
+						contentType: "application/json; charset=utf-8",
 						success: function() {
 							window.location = 'https://jamocracy.herokuapp.com/create';
 							alert("s");
-						}
+						},
 						error: function (err){
 							alert("e")
 						}
