working with async

--- a/public/info.html
+++ b/public/info.html
@@ -20,7 +20,7 @@
 							alert("s");
 						},
 						error: function (err){
-							alert("e")
+							alert(err.responseText)
 						}
 					});
 				});
