working with post/get

--- a/public/info.html
+++ b/public/info.html
@@ -8,7 +8,9 @@
 				$("button").click(function () {
 					var phoneNumber = document.getElementById("adminNumber").value;
 					var name = document.getElementById("playlistName").value;
-					$.post('https://jamocracy.herokuapp.com/create', {admin: phoneNumber, playlist: name});
+					$.post('https://jamocracy.herokuapp.com/create', {admin: phoneNumber, playlist: name}, function(){
+							alert("done");
+					});
 				});
 			});
 		</script>
