Dan's first commit

--- a/public/success.html
+++ b/public/success.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<p>Your playlist was sucessfully created. Your code is:</p>
+		<p>Your playlist was sucessfully created! Your code is:</p>
 	</body>
 </html>
