Dan's second commit

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
-		<title> Jamocracy, the future of music </title>
+		<title> Jamocracy! </title>
 		<script>
 			$(document).ready(function() {
 				$("button").click(function() {
-				window.location = 'https://accounts.spotify.com/authorize?response_type=code&client_id=0095976fe9c24fc5a6e4a7559e01f37e&scope=playlist-read-private%20playlist-modify-public%20playlist-modify-private%20user-read-private&redirect_uri=http%3A%2F%2Fjamocracy.herokuapp.com%2Fauth';		
+				window.location = 'https://accounts.spotify.com/authorize?response_type=code&client_id=0095976fe9c24fc5a6e4a7559e01f37e&scope=playlist-read-private%20playlist-modify-public%20playlist-modify-private%20user-read-private&redirect_uri=http%3A%2F%2Fjamocracy.herokuapp.com%2Fauth';
 				});
 			});
 		</script>
