--- a/public/info.html
+++ b/public/info.html
@@ -16,7 +16,7 @@
 		</script>
 	</head>
 	<body>				
-		<p>Admin Number</p>
+		<p>Admin Phone Number</p>
 		<textarea id="adminNumber" rows="1" cols="50"></textarea>
 		</br></br>
 		<p>Playlist Name</p>
