--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,29 @@
 <!doctype html>
 <html>
   <head>
-    <title>Example of the Authorization Code flow with Spotify</title>
+    <title>Jamocracy!</title>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Jamocracy</h1>
+        <p class="lead">
+          Jamocracy is a web service that enables users to add songs to Spotify playlists via text message.
+        </p>
+        <p>
+          <a class="btn btn-lg btn-success" href="/login" role="button">Log in with Spotify</a>
+        </p>
+      </div>
+    </div>
+  </body>
+</html>
+<!--<!doctype html>
+<html>
+  <head>
+    <title>Jamocracy!</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
     <style type="text/css">
@@ -139,7 +161,7 @@
       })();
     </script>
 	</body>
-</html>
+</html>-->
 
 
 <!--<!doctype html>
