--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html>
   <head>
-    <title>Jamocracy, bring the jams</title>
+    <title>Jamocracy: Bring the Jams</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
     <style type="text/css">
       .container {
         text-align: center;
+        position: relative;
+      }
+      .container{
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
       }
     </style>
   </head>
