--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         text-align: center;
         position: relative;
       }
-      .container{
+      .jumbotron{
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
