--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,9 @@
     <style type="text/css">
       .container {
         text-align: center;
-        position: relative;
-      }
-      .jumbotron{
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
       }
     </style>
   </head>
