--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
 		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
     <style type="text/css">
+      body {
+          height: 100%;
+      }
       .container {
-        height: 100%;
         text-align: center;
         display: flex;
         flex-direction: column;
