--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,19 @@
 		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
     <style type="text/css">
-      body {
-          height: 100%;
+      html, body, .container{
+        height: 100%;
+        width: 100%;
+        margin: 0;
       }
       .container {
+        margin: auto;
         text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+        display: table;
+      }
+      .jumbotron{
+        display: table-cell;
+        vertical-align: middle;
       }
     </style>
   </head>
