--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
     <style type="text/css">
-      html, body, .container{
+      html, body{
         height: 100%;
         width: 100%;
         margin: 0;
