--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
         width: 100%;
         margin: 0;
       }
-      .container {
+      body{
         margin: auto;
         text-align: center;
         display: table;
       }
-      .jumbotron{
+      .container{
         display: table-cell;
         vertical-align: middle;
       }
