--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       .container{
         display: table-cell;
         vertical-align: middle;
+        max-width: 730px;
       }
     </style>
   </head>
