--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
-    <style type="text/css">
+    <!--<style type="text/css">
       html, body{
         height: 100%;
         margin: 0;
@@ -19,7 +19,7 @@
         display: table-cell;
         vertical-align: middle;
       }
-    </style>
+    </style>-->
   </head>
   <body>
     <div class="container">
