--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
-    <!--<style type="text/css">
+    <style type="text/css">
       html, body{
         height: 100%;
         margin: 0;
@@ -19,7 +19,7 @@
         display: table-cell;
         vertical-align: middle;
       }
-    </style>-->
+    </style>
   </head>
   <body>
     <div class="container">
@@ -35,92 +35,3 @@
     </div>
   </body>
 </html>
-<!--<!doctype html>
-<html>
-  <head>
-    <title>Jamocracy!</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
->>>>>>> e80d48f688e45c6b8617a3cdbba36d4576360451
-		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
-  </head>
-
-  <body>
-	<div class="container">
-      <div id="login">
-        <h1>This is an example of the Authorization Code flow</h1>
-        <a href="/login" class="btn btn-primary">Log in with Spotify</a>
-      </div>
-      <div id="loggedin">
-        <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
-      </div>
-    </div>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script>
-      (function() {
-        /**
-         * Obtains parameters from the hash of the URL
-         * @return Object
-         */
-        function getHashParams() {
-          var hashParams = {};
-          var e, r = /([^&;=]+)=?([^&;]*)/g,
-              q = window.location.hash.substring(1);
-          while ( e = r.exec(q)) {
-             hashParams[e[1]] = decodeURIComponent(e[2]);
-          }
-          return hashParams;
-        }
-
-        var params = getHashParams();
-        var access_token = params.access_token,
-            refresh_token = params.refresh_token,
-            error = params.error;
-        if (error) {
-          alert('There was an error during the authentication');
-        } else {
-          if (access_token) {
-            $.ajax({
-                url: 'https://api.spotify.com/v1/me',
-                headers: {
-                  'Authorization': 'Bearer ' + access_token
-                },
-                success: function(response) {
-                  $('#login').hide();
-                  $('#loggedin').show();
-                }
-            });
-          } else {
-              // render initial screen
-              $('#login').show();
-              $('#loggedin').hide();
-          }
-
-        }
-      })();
-    </script>
-	</body>
-</html>-->
-
-
-<!--<!doctype html>
-<html>
-	<head>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
-		<title> Jamocracy! </title>
-		<script>
-			$(document).ready(function() {
-				$("button").click(function() {
-				window.location = 'https://accounts.spotify.com/authorize?response_type=code&client_id=0095976fe9c24fc5a6e4a7559e01f37e&scope=playlist-read-private%20playlist-modify-public%20playlist-modify-private%20user-read-private&redirect_uri=http%3A%2F%2Fjamocracy.herokuapp.com%2Fauth';
-				});
-			});
-		</script>
-	</head>
-	<body>
-		<div>
-			<p>
-			<button>Log in</button>
-			</p>
-		</div>
-	</body>
-</html>-->
