--- a/public/info.html
+++ b/public/info.html
@@ -5,8 +5,11 @@
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
 		<style type="text/css">
-			textarea {
-				resize: none;
+			body{
+				background-color: #eee;
+			}
+			.form-signin{
+				max-width: 330px;
 			}
 		</style>
 	</head>
@@ -23,6 +26,7 @@
 						<input type="text" class="form-control" id="playlistName" placeholder="Party">
 				</div>
 			</form>
+			<button type="submit" class="btn btn-default">Submit</button>
 		</div>
 	</body>
 </html>
