--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,9 @@
   <head>
     <title>Jamocracy: Bring the Jams</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
-    <style type="text/css">
-      html, body{
-        height: 100%;
-        margin: 0;
-      }
-      body{
-        margin: auto;
-        text-align: center;
-        display: table;
-      }
-      .container{
-        display: table-cell;
-        vertical-align: middle;
-      }
-    </style>
   </head>
   <body>
     <div class="container">
