Adding support for existing playlists

--- a/public/info.html
+++ b/public/info.html
@@ -23,3 +23,8 @@
 		</div>
 	</body>
 </html>
+<script>
+	$.getJSON( "/playlists", function( data ) {
+		console.log(JSON.stringify(data));
+	});
+</script>
