--- a/public/success.html
+++ b/public/success.html
@@ -2,7 +2,6 @@
 <html>
 	<head>
 		<title>Jamocracy: Bring the Jams</title>
-		<title>Jamocracy: Bring the Jams</title>
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
@@ -10,7 +9,7 @@
 	<body>
 		<div class="container">
 			<div class="jumbotron">
-				<h2>Success!</h2>
+				<h2>Success! Check you phone for a text!</h2>
 			</div>
 		</div>
 	</body>
