Adding support for existing playlists

--- a/public/info.html
+++ b/public/info.html
@@ -25,6 +25,8 @@
 </html>
 <script>
 	$.getJSON( "/playlists", function( data ) {
+		console.log(data);
+		console.log("*******************")
 		console.log(JSON.stringify(data));
 	});
 </script>
