Adding support for existing playlists

--- a/public/info.html
+++ b/public/info.html
@@ -28,7 +28,7 @@
 <script>
 	$.getJSON( "/playlists", function( playlists ) {
 		console.log(playlists);
-		for(var i = 0; i < playlists.length, i++){
+		for(var i = 0; i < playlists.length; i++){
 			var radioButton = $('
 				<div class="radio">
   					<label>
