Adding support for existing playlists

--- a/public/info.html
+++ b/public/info.html
@@ -29,14 +29,14 @@
 	$.getJSON( "/playlists", function( playlists ) {
 		console.log(playlists);
 		for(var i = 0; i < playlists.length; i++){
-			var radioButton = $('
-				<div class="radio">
+			var radioButton = $("
+				<div class='radio'>
   					<label>
-    					<input type="radio" name="playlist" value="'+playlists[i].id+'">
-    						'+playlists[i].name+'
+    					<input type='radio' name='playlist' value='"+playlists[i].id+"'>
+    						"+playlists[i].name+"
   					</label>
 				</div>
-			');
+			");
 			$('#radios').append(radioButton);
 		}
 	});
