Fixing issues with existing playlist support

--- a/public/success.html
+++ b/public/success.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="container">
 			<div class="jumbotron">
-				<h2>Success! Check you phone for a text!</h2>
+				<h2>Success! Check your phone!</h2>
 			</div>
 		</div>
 	</body>
