--- a/public/info.html
+++ b/public/info.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="container">
 			<div class="jumbotron">
-				<form action="/callback" method="post" class="form-signin">
+				<form action="/submit" method="post" class="form-signin">
 					<h2 class="form-signin-heading">Jamocracy</h2>
 					<div class="form-group">
 							<input type="text" class="form-control" name="phoneNumber" placeholder="Phone number">
