--- a/public/success.html
+++ b/public/success.html
@@ -9,7 +9,10 @@
 	<body>
 		<div class="container">
 			<div class="jumbotron">
-				<h2>Success! Check your phone!</h2>
+				<h1>Success!</h1>
+				<p>You will soon receive a text message from Jamocracy.</p>
+				<p>Have your guests send the party code to this number.</p>
+				<p>They can then add songs to the playlist using texts.</p>
 			</div>
 		</div>
 	</body>
