--- a/public/success.html
+++ b/public/success.html
@@ -10,8 +10,8 @@
 		<div class="container">
 			<div class="jumbotron">
 				<h1>Success!</h1>
-				<p>You will soon receive a text message from Jamocracy.</p>
-				<p>Have your guests send the party code to this number.</p>
+				<p>You will soon receive a text from Jamocracy.</p>
+				<p>Have your guests send the code to this number.</p>
 				<p>They can then add songs to the playlist using texts.</p>
 			</div>
 		</div>
